Update year labels for plot in forecast history

--- a/PowellInflow/LakePowellForecastHistory.ipynb
+++ b/PowellInflow/LakePowellForecastHistory.ipynb
@@ -305,7 +305,7 @@
     "#  PLOT\n",
     "\n",
     "years = ['Year_1', 'Year_2', 'Year_3']\n",
-    "year_labels = ['2024 – 2025', '2025 – 2026', '2026 – 2027']\n",
+    "year_labels = ['Year 1', 'Year 2', 'Year 3']\n",
     "\n",
     "custom_styles = {\n",
     "    usbr_label: {'color': 'red', 'linestyle': '-', 'linewidth': 3},\n",
